--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,12 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <style>
+    <!-- <style>
       * {
         margin: 0;
         padding: 0;
       }
-    </style>
+    </style> -->
     <title>React App</title>
   </head>
   <body>
